@@ -1,84 +1,75 @@
 package com.example.demo.service.impl;
 
-import com.example.demo.dto.AuthRequest;
-import com.example.demo.dto.AuthResponse;
-import com.example.demo.dto.UserRegisterDto;
-import com.example.demo.exception.ResourceNotFoundException;
-import com.example.demo.model.Role;
-import com.example.demo.model.User;
+import com.example.demo.dto.*;
+import com.example.demo.model.*;
 import com.example.demo.repository.UserRepository;
+import com.example.demo.exception.ResourceNotFoundException;
 import com.example.demo.security.JwtProvider;
 import com.example.demo.service.UserService;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
-
-import java.util.Collections;
+import org.springframework.security.crypto.password.PasswordEncoder;
+import java.time.LocalDateTime;
+import java.util.HashSet;
 import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
 public class UserServiceImpl implements UserService {
 
-    private final UserRepository userRepository;
-    private final PasswordEncoder passwordEncoder;
+    private final UserRepository repo;
+    private final PasswordEncoder encoder;
     private final JwtProvider jwtProvider;
 
-    public UserServiceImpl(UserRepository userRepository, 
-                          PasswordEncoder passwordEncoder,
-                          JwtProvider jwtProvider) {
-        this.userRepository = userRepository;
-        this.passwordEncoder = passwordEncoder;
+    public UserServiceImpl(UserRepository repo, PasswordEncoder encoder, JwtProvider jwtProvider) {
+        this.repo = repo;
+        this.encoder = encoder;
         this.jwtProvider = jwtProvider;
     }
 
     @Override
     public User register(UserRegisterDto dto) {
-        if (dto.getName() == null || dto.getName().trim().isEmpty()) {
-            throw new IllegalArgumentException("Name must not be empty");
-        }
+        if (dto.getName() == null || dto.getName().isBlank())
+            throw new IllegalArgumentException("name cannot be empty");
+        if (dto.getPassword() == null || dto.getPassword().isBlank())
+            throw new IllegalArgumentException("password cannot be empty");
+        if (repo.findByEmail(dto.getEmail()).isPresent())
+            throw new IllegalArgumentException("email must be unique");
 
-        if (dto.getPassword() == null || dto.getPassword().trim().isEmpty()) {
-            throw new IllegalArgumentException("Password must not be empty");
-        }
-
-        if (userRepository.findByEmail(dto.getEmail()).isPresent()) {
-            throw new IllegalArgumentException("Email already exists");
-        }
-
-        Set<Role> roles = dto.getRoles() != null && !dto.getRoles().isEmpty() 
-            ? dto.getRoles().stream().map(Role::valueOf).collect(Collectors.toSet())
-            : Collections.singleton(Role.USER);
+        Set<Role> roles = new HashSet<>();
+        if (dto.getRoles() != null && !dto.getRoles().isEmpty())
+            roles = dto.getRoles().stream().map(Role::valueOf).collect(Collectors.toSet());
+        else roles.add(Role.ROLE_USER);
 
         User user = User.builder()
                 .name(dto.getName())
                 .email(dto.getEmail())
-                .password(passwordEncoder.encode(dto.getPassword()))
+                .password(encoder.encode(dto.getPassword()))
                 .roles(roles)
+                .createdAt(LocalDateTime.now())
                 .build();
 
-        return userRepository.save(user);
+        return repo.save(user);
     }
 
     @Override
-    public AuthResponse login(AuthRequest request) {
-        User user = userRepository.findByEmail(request.getEmail())
-                .orElseThrow(() -> new ResourceNotFoundException("User not found"));
+    public AuthResponse login(AuthRequest req) {
+        User user = repo.findByEmail(req.getEmail()).orElseThrow(() -> new ResourceNotFoundException("User not found"));
 
-        if (!passwordEncoder.matches(request.getPassword(), user.getPassword())) {
-            throw new IllegalArgumentException("Invalid credentials");
-        }
+        if (!encoder.matches(req.getPassword(), user.getPassword()))
+            throw new IllegalArgumentException("Invalid password");
 
-        String token = jwtProvider.generateToken(user);
-        Set<String> roleStrings = user.getRoles().stream()
-                .map(Enum::name)
-                .collect(Collectors.toSet());
+        String token = jwtProvider.generateToken(user.getId(), user.getEmail(), user.getRoles());
 
-        return new AuthResponse(token, user.getId(), user.getEmail(), roleStrings);
+        AuthResponse response = new AuthResponse();
+        response.setToken(token);
+        response.setUserId(user.getId());
+        response.setEmail(user.getEmail());
+        response.setRoles(user.getRoles().stream().map(Enum::name).collect(Collectors.toSet()));
+        return response;
     }
 
     @Override
     public User getByEmail(String email) {
-        return userRepository.findByEmail(email)
-                .orElseThrow(() -> new ResourceNotFoundException("User not found"));
+        return repo.findByEmail(email).orElseThrow(() -> new ResourceNotFoundException("User not found"));
     }
 }
